hphp/hack/test/typecheck/inline_class.php.exp
File "inline_class.php", line 3, characters 5-16:
Encountered unexpected text 'class bar {}', was expecting a statement. (Parsing[1002])
