hphp/hack/test/typecheck/inline_class.php
<?hh // partial
function foo() : void {
    class bar {};
}
